End of Section 11

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "drgeyqcoa",
+    "ApiKey": "134578552798369",
+    "ApiSecret": "3kK7u5NAZ0YjDgAhDu8taVkxN30"
+  }
 }
